test/sema/typeck/module/call-non-identifier.dora
mod foo { fn bar() {} }
fn f() { foo::package(); }
